fix: iOS version overlap bottom notch

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -274,6 +274,8 @@ ion-popover-view.fit ion-content {
     text-align: center;
     color: lightgray;
     bottom: 5px;
+    bottom: constant(safe-area-inset-bottom);
+    bottom: env(safe-area-inset-bottom);
   }
 }
 
